--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
    
-    
+ <div id="main">
+    <div class="card">
+        <h1>A</h1>
+    </div>
+ </div>   
 
 <script src="script.js"></script>
 </body>
