Added function to key presses-> pinao sound play

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
  <div id="main">
     <div class="card">
         <h1>***</h1>
+        <audio autoplay src=""></audio>
     </div>
  </div>   
+
 
 <script src="script.js"></script>
 </body>
